...
  Widget build(BuildContext context) {
    if (!PlatformHelper.isIOS && !PlatformHelper.isMacOS) {
      return const SizedBox.shrink();
    }

    return SettingsTile(
      description: "蓝牙歌词",
      subtitle: "在锁屏和蓝牙设备歌曲名称处显示当前歌词",
      action: Switch(
        value: settings.bluetoothLyric,
        onChanged: (value) async {
          setState(() {
            settings.bluetoothLyric = value;
...
